# EventAligment

./: .gitignore  CMakeLists.txt  EventAlignment.cc  EventAlignment.h  main.cpp
cmake/: CMakeCompatibility.cmake  FindROOT.cmake  Platform.cmake
include/: EventAlignment.hh  Linkdef.h  Utils.hh
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  EventAlignment.cc  Utils.cc
