# Build executable:

#INCLUDE_DIRECTORIES(.)
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET (Eval_SOURCES main.cpp)

SET(MY_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/include ${ROOT_INCLUDE_DIR} )

SET(EVAL_EXECUTABLE EventAlignment.exe)
add_executable(${EVAL_EXECUTABLE} main.cpp)
target_link_libraries(${EVAL_EXECUTABLE} ${PROJECT_NAME} ${ROOT_LIBRARIES})

INSTALL(TARGETS ${EVAL_EXECUTABLE}
#        RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}
        RUNTIME DESTINATION bin
        ARCHIVE DESTINATION lib)

